# DMCF

./: CMakeLists.txt  README.md  main.cpp
MemoryManagement/: CMakeLists.txt  main.cpp
MemoryManagement/src/: MemoryManagement.cpp
MsgDispatcher/: CMakeLists.txt
MsgDispatcher/include/: DispatcherDefinition.h  IMsgReceiver.h  IMsgSender.h  MsgDispatcher.h  MsgReceiver.h  MsgSender.h
MsgDispatcher/src/: MsgDispatcher.cpp
ThreadManager/: CMakeLists.txt
ThreadManager/include/: BaseThread.h  Guard.h  Locker.h  Queue.h  ThreadPool.h  WorkThread.h  osDMCF.h
ThreadManager/src/: ThreadPool.cpp  WorkThread.cpp  osDMCF.cpp
Tools/SI/: Distributed Message Communicating System.IAB  Distributed Message Communicating System.IAD  Distributed Message Communicating System.IMB  Distributed Message Communicating System.IMD  Distributed Message Communicating System.PFI  Distributed Message Communicating System.PO  Distributed Message Communicating System.PR  Distributed Message Communicating System.PRI  Distributed Message Communicating System.PS  Distributed Message Communicating System.SearchResults  Distributed Message Communicating System.WK3
include/define/: framework_dll_definition.h
include/event/: EventHandler.h  EventQueuePool.h
include/loger/: loger.h  loger_definition.h
include/singleton/: Singleton.h
interface/: IQueuePool.h  IThread.h  IThreadPool.h
os/: CMakeLists.txt
os/common/include/: Guard.h  IOSFactory.h  Locker.h
os/common/src/: OSFactory.cpp  os.cpp
os/interface/: dmcfos.h  os.h
os/linux/: CMakeLists.txt
os/linux/include/: QueueImpl.h  definition.h
os/linux/src/: DMCF_OSMutexImpl.cpp  DMCF_OSSemaphoreImpl.cpp  DMCF_OSThreadImpl .cpp  QueueImpl.cpp
