CMAKE_MINIMUM_REQUIRED(VERSION 2.6) 

PROJECT(DMCF)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/output/bin/)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/output/lib/)

#INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/os/interface)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/ThreadManager/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/interface)

LINK_DIRECTORIES(${FRAMEWORK_BINARY_DIR}/ThreadManager)
#LINK_DIRECTORIES(${FRAMEWORK_BINARY_DIR}/os)

ADD_SUBDIRECTORY(ThreadManager)
#ADD_SUBDIRECTORY(os)

AUX_SOURCE_DIRECTORY(. SOURCE_MAIN)

ADD_EXECUTABLE(DMCF ${SOURCE_MAIN})
TARGET_LINK_LIBRARIES(DMCF ThreadManager)
#TARGET_LINK_LIBRARIES(DMCF os)
TARGET_LINK_LIBRARIES(DMCF pthread)
