INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
SET(SUB_SOURCE ./src)

IF (ONLY_ENABLE_MEMORYMANAGEMENT)
    AUX_SOURCE_DIRECTORY(. SOURCE_MAIN)

    ADD_EXECUTABLE(DMCF ${SOURCE_MAIN} ${SUB_SOURCE})
    set_target_properties(DMCF PROPERTIES LINKER_LANGUAGE CXX)
ELSE ()
    AUX_SOURCE_DIRECTORY(${SUB_SOURCE} SOURCE)
    ADD_LIBRARY(MemoryManagement ${SOURCE})
ENDIF ()