INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/interface)

ADD_SUBDIRECTORY(common)
#ADD_SUBDIRECTORY(linux) # For linux
#ADD_SUBDIRECTORY(windows) # TODO : For windows
#AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/common COMMON_SOURCE)
#AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR}/linux LINUX_SOURCE)